# rs-crypto

./: Cargo.toml  README.md
.github/workflows/: rust.yml
design/: first_phase_planning.md
lib/blockchain/: block.rs  mod.rs  transaction.rs
src/: blockchain.rs  main.rs
src/blockchain/: append_only_singly_linked_list.rs  block.rs  mod.rs
tests/: blockchain_tests.rs
