[package]
name = "crypto"
version = "0.1.0"
authors = ["astherath <farceriv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-crypto = "0.2.36"

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[lib]
name = "lib"
path = "lib/lib.rs"
